force-app/main/default/objects/Beneficiario__c/Beneficiario__c.object-meta.xml
<CustomObject>
    <label>Beneficiário</label>
    <nameField>
        <label>Nome de Beneficiário</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiários</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>