force-app/main/default/objects/Beneficiario__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <description>o time de formalização pode incluir mais de um debenturista para geração do contrato futuro</description>
    <label>Documento</label>
    <length>25</length>
    <type>Text</type>
</CustomField>