force-app/main/default/objects/Beneficiario__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <description>Para preencher quando debenturista</description>
    <label>Endereço</label>
    <length>60</length>
    <type>Text</type>
</CustomField>