force-app/main/default/objects/Beneficiario__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Para preencher quando debenturista</description>
    <label>Estado</label>
    <length>2</length>
    <type>Text</type>
</CustomField>