force-app/main/default/objects/Beneficiario__c/fields/GrauRelacionamento__c.field-meta.xml
<CustomField>
    <fullName>GrauRelacionamento__c</fullName>
    <label>Grau de relacionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mãe</fullName>
            </value>
            <value>
                <fullName>Pai</fullName>
            </value>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
            <value>
                <fullName>Filha</fullName>
            </value>
            <value>
                <fullName>Filho</fullName>
            </value>
            <value>
                <fullName>Irmã</fullName>
            </value>
            <value>
                <fullName>Irmão</fullName>
            </value>
            <value>
                <fullName>Tia</fullName>
            </value>
            <value>
                <fullName>Tio</fullName>
            </value>
            <value>
                <fullName>Avó</fullName>
            </value>
            <value>
                <fullName>Avô</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>