force-app/main/default/objects/Beneficiario__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Beneficiários</relationshipLabel>
    <relationshipName>Beneficiarios</relationshipName>
    <type>Lookup</type>
</CustomField>