force-app/main/default/objects/Beneficiario__c/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <description>o time de formalização pode incluir mais de um debenturista para geração do contrato futuro</description>
    <label>RG</label>
    <length>12</length>
    <type>Text</type>
</CustomField>