force-app/main/default/objects/Beneficiario__c/fields/TelefoneInternacional__c.field-meta.xml
<CustomField>
    <fullName>TelefoneInternacional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle para evitar validações e máscaras de números nacionais para números de telefone internacionais informados.</description>
    <label>Telefone internacional</label>
    <type>Checkbox</type>
</CustomField>