force-app/main/default/objects/Beneficiario__c/fields/TipoBeneficiario__c.field-meta.xml
<CustomField>
    <fullName>TipoBeneficiario__c</fullName>
    <label>Tipo beneficiário</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1°</fullName>
            </value>
            <value>
                <fullName>2°</fullName>
            </value>
            <value>
                <fullName>3°</fullName>
            </value>
            <value>
                <fullName>4°</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>