force-app/main/default/objects/Beneficiario__c/recordTypes/Beneficiario.recordType-meta.xml
<RecordType>
    <fullName>Beneficiario</fullName>
    <active>true</active>
    <label>Beneficiario</label>
</RecordType>