force-app/main/default/objects/Beneficiario__c/recordTypes/Debenturista.recordType-meta.xml
<RecordType>
    <fullName>Debenturista</fullName>
    <active>true</active>
    <label>Debenturista</label>
</RecordType>