force-app/main/default/objects/Beneficiario__c/validationRules/Permissao_Beneficiario.validationRule-meta.xml
<ValidationRule>
    <fullName>Permissao_Beneficiario</fullName>
    <active>true</active>
    <errorConditionFormula>And ( Not(  ISBLANK( Oportunidade__c ) ) ,
      RecordType.Name = &apos;Debenturista&apos; 
    )</errorConditionFormula>
    <errorMessage>Para Oportunidades, nao é permitido criar registros Debenturistas</errorMessage>
</ValidationRule>