force-app/main/default/objects/Beneficiario__c/validationRules/Permissao_Debenturista.validationRule-meta.xml
<ValidationRule>
    <fullName>Permissao_Debenturista</fullName>
    <active>true</active>
    <errorConditionFormula>And( Not(  ISBLANK(Contrato__c) ) ,
     RecordType.Name = &apos;Debenturista&apos; ,         
     Not($Permission.FormalizacaoCredito )
   )</errorConditionFormula>
    <errorMessage>Somente o time de Formalização possui permissão para edição ou criação de um novo debenturista.</errorMessage>
</ValidationRule>