force-app/main/default/objects/Beneficiario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Documento__c</columns>
    <columns>RG__c</columns>
    <columns>GrauRelacionamento__c</columns>
    <columns>Contrato__c</columns>
    <columns>Oportunidade__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>